force-app/main/default/objects/T_E_Line_Items__c/T_E_Line_Items__c.object-meta.xml
<CustomObject>
    <label>T&amp;E Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>T&amp;E Line Items ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;E Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>