force-app/main/default/objects/T_E_Line_Items__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Booked</fullName>
            </value>
            <value>
                <fullName>Customer Booked</fullName>
            </value>
            <value>
                <fullName>Company Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>