force-app/main/default/objects/T_E_Line_Items__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Of_Expense__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within City</fullName>
            </value>
            <value>
                <fullName>Outside City</fullName>
            </value>
            <value>
                <fullName>Multi City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>