force-app/main/default/objects/T_E_Line_Items__c/fields/Travels_Expense__c.field-meta.xml
<CustomField>
    <fullName>Travels_Expense__c</fullName>
    <label>Travels &amp; Expense</label>
    <referenceTo>Travels_Expenses__c</referenceTo>
    <relationshipLabel>T&amp;E Line Items</relationshipLabel>
    <relationshipName>T_E_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>