force-app/main/default/objects/T_E_Line_Items__c/fields/Type_Of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Expense__c</fullName>
    <label>Type Of Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Expenses</fullName>
            </value>
            <value>
                <fullName>Car/Cab Expenses</fullName>
            </value>
            <value>
                <fullName>Client Entertainment</fullName>
            </value>
            <value>
                <fullName>Mobile &amp; WIFI Expenses</fullName>
            </value>
            <value>
                <fullName>Flight Expenses</fullName>
            </value>
            <value>
                <fullName>Train Expenses</fullName>
            </value>
            <value>
                <fullName>Certification Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>